--- a/arch/arm/configs/shamu_defconfig
+++ b/arch/arm/configs/shamu_defconfig
@@ -718,6 +718,7 @@ CONFIG_SUSPEND_TIME=y
 # CONFIG_DEDUCE_WAKEUP_REASONS is not set
 # CONFIG_PARTIALRESUME is not set
 # CONFIG_PM_SYNC_BEFORE_SUSPEND is not set
+CONFIG_SUSPEND_TIME_TIMEKEEPING=y
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_ARM_CPU_SUSPEND=y
 CONFIG_NET=y
